--- a/src/TodoList/TodoItem.css
+++ b/src/TodoList/TodoItem.css
@@ -1,19 +1,29 @@
 .item {
   padding-left: 10px;
   padding-right: 10px;
-  margin-left: 2px;
-  margin-right: 2px;
-  height: 40px;
-  line-height: 40px;
+  margin-bottom: 10px;
+  height: 50px;
+  line-height: 50px;
   position: relative;
   color: #464e51;
+  background-color: lightyellow;
+  border: 2px solid grey;
+  border-radius: 5px;
+  box-shadow: 0px 2px 2px #464e51;
 }
 
-.done {
+.item .content {
+  cursor: pointer;
+  padding-left: 15px;
+}
+
+.item.done {
   text-decoration: line-through;
   color: grey;
+  background-color: #d0f0c0;
 }
 
+/*** Delete Button ***/
 .delete-btn {
   outline: none;
   background-color: red;
@@ -26,6 +36,7 @@
   height: 25px;
   cursor: pointer;
   box-shadow: 0 2px #999;
+  font-size: 14px;
 }
 
 .delete-btn:hover {
@@ -35,4 +46,8 @@
 .delete-btn:active {
   box-shadow: 0 0;
   transform: translateY(2px);
+}
+
+.delete-btn:focus {
+  border-width: 2px;
 }
